--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,9 @@ dependencies:
   desktop_drop: ^0.4.4 #for drag and drop
   webdev: ^3.0.6 #for web
   archive: ^3.1.2 #for zip
-
   flutter_sound: ^9.2.13
   get: ^4.6.6 #for state management
-
+  fl_chart: ^0.64.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -75,9 +74,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/mago-word-dark.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
