--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   cloud_firestore: ^4.12.0
   firebase_storage: ^11.4.0
   firebase_core: ^2.20.0
+  syncfusion_flutter_charts: ^23.1.42
+  syncfusion_flutter_pdf: ^23.1.42
 
 dev_dependencies:
   build_runner: ^2.1.5
@@ -99,16 +101,25 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+     - family: NanumSquare
+       fonts:
+         - asset: assets/fonts/NanumSquare_acB.ttf
+         - asset: assets/fonts/NanumSquare_acEB.ttf
+         - asset: assets/fonts/NanumSquare_acL.ttf
+         - asset: assets/fonts/NanumSquare_acR.ttf
+         - asset: assets/fonts/NanumSquareB.ttf
+         - asset: assets/fonts/NanumSquareEB.ttf
+         - asset: assets/fonts/NanumSquareL.ttf
+         - asset: assets/fonts/NanumSquareR.ttf
+
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
+
+     - family: NEXONLv1
+       fonts:
+         - asset: assets/fonts/NEXONLv1GothicBold.ttf
+         - asset: assets/fonts/NEXONLv1GothicLight.ttf
+         - asset: assets/fonts/NEXONLv1GothicRegular.ttf
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
