--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   flutter_local_notifications: ^16.1.0 #for notification
   just_audio: ^0.9.35 #for audio
 
+  flutter_spinkit: ^5.2.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
